# icon-why3

./: memo.md
.github/workflows/: actions.yml
documents/icon-why3/: package-lock.json  package.json
documents/icon-why3/blog/: 2024-3-15-example-mixer.md  2024-3-15-example-swap.md  authors.yml
examples/: auction.tzw  boomerang.tzw  boomerang2.tzw  boomerang_acc.tzw  callback.tzw  callback_with_addr.tzw  dao.tzw  mixer.tzw  mixer_with_implicit.tzw  pseudo-dao.py  splitter.tzw  splitter0.tzw  splitter2.tzw  splitter3.tzw  splitter4.tzw  splitter5.tzw  test_balance.tzw  test_defs_in_preambles.tzw  token_swap.tzw  token_swap1.tzw  token_swap2.tzw  token_swap3.tzw  token_swap4.tzw  token_swap_with_implicit.tzw
examples/dexter2/: liquidity.tzw
examples/neg/: entrypoints.tzw
lib/: dune  error_monad.ml  error_monad.mli  gen_mlw.ml  id.ml  id.mli  ptree_printer.ml  ptree_printer.mli  sort.ml  sort.mli  tzw.ml  tzw.mli
lib/mlw/: headers.mlw  preambles.mlw  step.mlw
