(library
 (name lib_icon)
 (libraries why3 re))

(rule
 (target preambles.ml)
 (deps mlw/preambles.mlw mlw/step.mlw)
 (action
  (with-stdout-to
   %{target}
   (progn
    (echo "let preambles = {preambles|")
    (cat mlw/preambles.mlw)
    (echo "|preambles}")
    (echo "let step = {preambles|")
    (cat mlw/step.mlw)
    (echo "|preambles}")))))
