(library
 (name lib_icon)
 (libraries why3 re))

(rule
 (target headers.ml)
 (deps mlw/headers.mlw mlw/step.mlw)
 (action
  (with-stdout-to
   %{target}
   (progn
    (echo "let headers = {headers|")
    (cat mlw/headers.mlw)
    (echo "|headers}")
    (echo "let step = {headers|")
    (cat mlw/step.mlw)
    (echo "|headers}")))))
